--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
 }
 
 html {
@@ -37,4 +36,11 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #626970;
+}
+@media (max-width: 960px) {
+  body {
+    min-height: 100vh; /* Setează înălțimea minimă a corpului paginii la 100% din înălțimea ecranului */
+    display: flex; /* Folosește flexbox pentru a asigura că conținutul este aliniat corect */
+    flex-direction: column; /* Aliniere verticală a conținutului */
+  }
 }
